[package]
authors = ["Marc Brinkmann <git@marcbrinkmann.de>"]
name = "csvx"
version = "5.4.1"

[dependencies]
chrono = "0.3.0"
clap = "2.23.3"
csv = "0.15.0"
lazy_static = "0.2.8"
regex = "0.2.1"
safe_unwrap = "0.2.0"
term-painter = "0.2.3"
term_size = "0.3.0"
try_from = "0.2.1"

[dependencies.textwrap]
default-features = false
features = []
version = "0.7"
